# teamSddCli

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  pytest.ini  sdd_final_architecture.md
docs/: 00_FILE_STRUCTURE.md  AI_STEP_VERIFICATION_CHECKLIST.md  CONTEXT.md  CURRENT_PROJECT_AUDIT.md  DECISIONS.md  IMPLEMENTATION_STRATEGY.md  README.md  ROADMAP.md
outputs/: openspec-de-vs-team-sdd.pptx  team-sdd-principle-mvp-plan.pptx
process/: __init__.py  actual_certification.py  analytics_artifacts.py  certification.py  corporate_adaptation.py  errors.py  feedback_policy.py  guided_process_integrity.py  guided_workflow.py  model_adapter.py  operation_cli.py  operation_dispatcher.py  operation_plan.py  operations_catalog.py  package.yaml  release-allowlist.yaml  release-certification-selection.yaml  release_candidate.py  weak_model_kit.py  workflow.yaml  workflow_operations.py
scripts/: __init__.py  bootstrap_team_specs.py  build_read_pack.py  certify_process_release.py  check_actual_certification_gate.py  check_corporate_flow.py  check_lifecycle_transition.py  check_parallel_plan.py  check_tech_lead_control.py  check_weak_model_evidence.py  classify_change.py  create_change.py  evaluate_change_gates.py  guided_owner_workflow.py  launch_role_task.py  manage_release_candidate.py  manual_fallback.py  migrate_change_classification.py  normalize_actual_certification.py  prepare_archive.py  prepare_spec_pr.py  preview_analytics.py  review_tech_lead.py  run_actual_certification.py  sdd.py  update_process_package.py  (+8 more)
(+597 files in other folders)
