[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sdd-process"
version = "0.3.6"
description = "Local deterministic SDD process package"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0", "jsonschema>=4.0"]

[project.scripts]
sdd = "process.operation_dispatcher:main"

[tool.setuptools]
packages = ["process", "process.validators", "scripts", "templates"]

[tool.setuptools.package-data]
process = ["**/*"]
templates = ["team-specs/**/*"]
